# jvips

./: .gitignore  .gitmodules  build.gradle  readme.asciidoc  settings.gradle
jvips-plugin/: build.gradle  gen-function-list.py  settings.gradle
jvips-plugin/src/main/antlr/: CSourceLexer.g4  CSourceParser.g4  DocReaderLexer.g4  DocReaderParser.g4
jvips-plugin/src/main/poet/com/squareup/javapoet/: CodeBlock.java  CodeWriter.java
jvips-plugin/src/main/resources/: Overrides.xml  Vips-8.0.xsd  c.xsd  function-list.txt  gir.xsd  glib.xsd  javaize.properties  oxm.xml  xml.xsd
jvips-plugin/src/main/resources/LATEST/: vips.gir
jvips-plugin/src/test/poet/com/squareup/javapoet/: ClassNameTest.java  ParameterSpecTest.java
jvips/common/: build.gradle  vips.example.properties
jvips/common/src/main/java/: module-info.java
jvips/jni/: build.gradle
jvips/jni/src/main/cpp/: CMakeLists.txt  JVipsErrorCodes.h  ValueHandler.cpp  ValueHandler.h  build.sh  jvips.h  jvips_VipsNative.cpp  jvips_VipsNative.h
jvips/jni/src/main/java/: module-info.java
jvips/jni/src/main/java/jvips/: VipsNative.java
jvips/panama/: build.gradle  includes.txt  panama-on-path.sh  panama.example.properties
jvips/panama/gradle/: panama.gradle
jvips/panama/src/main/java/: module-info.java
jvips/panama/src/main/java/org/libvips/: Constants$root.java  DOUBLEMASK.java  GBaseFinalizeFunc.java  GBaseInitFunc.java  GClassFinalizeFunc.java  GClassInitFunc.java  GInitiallyUnowned.java  GInitiallyUnownedClass.java  GInstanceInitFunc.java  GInterfaceFinalizeFunc.java  GInterfaceInfo.java  GInterfaceInitFunc.java  GMemVTable.java  GObject.java  GObjectClass.java  GObjectConstructParam.java  GObjectFinalizeFunc.java  GObjectGetPropertyFunc.java  GObjectSetPropertyFunc.java  GSignalAccumulator.java  GSignalCMarshaller.java  GSignalCVaMarshaller.java  GSignalEmissionHook.java  GTypeInfo.java  (+413 more)
jvips/testing/: build.gradle
(+249 files in other folders)
