cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 20)
project(jvips_jni)
set(CMAKE_BUILD_TYPE RelWithDebInfo)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -g")
find_package(PkgConfig REQUIRED)
#enable_testing()
#add_definitions(-DENABLE_PROFILING)
#add_subdirectory(tests)
#add_subdirectory(build/generated/sources/proto/main/cpp/)
include_directories(.)
include(UseJava)

find_package(Java REQUIRED)
find_package(JNI REQUIRED)
pkg_check_modules(GLIB2 REQUIRED glib-2.0)
if (GLIB2_FOUND)
    message (STATUS "GLIB2_INCLUDE_DIRS=${GLIB2_INCLUDE_DIRS}")
    message (STATUS "GLIB2_LIBRARIES=${GLIB2_LIBRARIES}")
    message (STATUS "GLIB2_LIBRARY_DIRS=${GLIB2_LIBRARY_DIRS}")
    message (STATUS "GLIB2_LDFLAGS=${GLIB2_LDFLAGS}")
endif()

link_directories(${GLIB2_LIBRARY_DIRS})
include_directories(${GLIB2_INCLUDE_DIRS})
link_directories(/usr/include/google)
include_directories(/usr/include/google)
#link_directories(/usr/include/orc-0.4)
#include_directories(/usr/include/orc-0.4)
LINK_LIBRARIES(orc-0.4 protobuf vips fmt aom heif exif png16  gif jpeg turbojpeg webp webpmux webpdemux lcms2 imagequant vips-cpp)
if(PROFILE_ENABLED)
    LINK_LIBRARIES(profiler)
endif()
#LINK_LIBRARIES(jni)
pkg_check_modules(VIPS REQUIRED vips)
if (VIPS_FOUND)
    message (STATUS "VIPS_INCLUDE_DIRS=${VIPS_INCLUDE_DIRS}")
    message (STATUS "VIPS_LIBRARIES=${VIPS_LIBRARIES}")
    message (STATUS "VIPS_LIBRARY_DIRS=${VIPS_LIBRARY_DIRS}")
endif()
link_directories(${VIPS_LIBRARY_DIRS})
add_definitions(-DJAVA_LOG)
include_directories(${VIPS_INCLUDE_DIRS})
add_library(jvips_jni SHARED
  jvips_VipsNative.cpp jvips_VipsNative.h ValueHandler.cpp ValueHandler.h jvips.h)

